Got rid of directive for modal box and set up filter to render link as clickable for images that are on the server

--- a/static/index.html
+++ b/static/index.html
@@ -127,10 +127,10 @@
                         </thead>
                         <tbody>
 
-                            <tr open-detail-modal ng-repeat="row in detailTable.rows"
+                            <tr ng-repeat="row in detailTable.rows"
                                 ng-click="selectDetailRow($parent.$index, $index, row)">
                                 <td ng-repeat="col in row">
-                                    {{ col }}
+                                    <div ng-bind-html-unsafe='col | detailCellContents'></div>
                                 </td>
                             </tr>
                         </tbody>
