--- a/static/index.html
+++ b/static/index.html
@@ -63,7 +63,7 @@
                 <div class="accordion-heading">
                     <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2"
                        href="#collapse{{$index}}">
-                        {{deployment.esp.name}}
+                        {{deployment.esp.name}} - {{deployment.name}}
                     </a>
                 </div>
                 <div id="collapse{{$index}}" class="accordion-body collapse">
