--- a/app/index.html
+++ b/app/index.html
@@ -129,6 +129,7 @@
 <script src="lib/jquery-1.10.2.min.js"></script>
 <script src="lib/jquery-ui.min.js"></script>
 <script src="lib/highstock.js"></script>
+<!--<script src="lib/exporting.js"></script>-->
 <script src="lib/bootstrap.min.js"></script>
 <script src="lib/angular.min.js"></script>
 <script src="lib/ui-bootstrap-tpls-0.6.0.min.js"></script>
