--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css"/>
     <link rel="stylesheet" type="text/css" href="css/jquery-ui.css"/>
-    <link rel="stylesheet" type="text/css" href="css/esp.css"/>
+    <link rel="stylesheet" type="text/css" href="css/esp-responsive.css"/>
 
     <!-- HTML 5 Shim for IE backwards compatibility -->
     <!--[if lt IE 9]>
@@ -20,107 +20,126 @@
 <body ng-cloak>
 
 <!-- The selection and graph panel row -->
-<div class="row">
-    <div id="selection-column" class="col-md-2 well well-sm" ng-controller="SelectionController">
-        <div id="deployment-dropdown-btn-group" class="btn-group">
-            <button id="deployment-dropdown-btn" class="btn btn-default btn-sm dropdown-toggle"
-                    type="button" data-toggle="dropdown">{{ selectedDeploymentName }} <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu">
-                <li ng-repeat="name in deploymentNames" ng-click="selectDeployment($index)">
-                    <a tabindex="-1" href="#">{{name}}</a>
-                </li>
-            </ul>
-        </div>
-        <div id="selection-accordion" class="panel-group">
-            <div class="panel panel-default" ng-repeat="deployment in selectedDeployments">
-                <div class="panel-heading">
-                    <h4 class="panel-title">
-                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#selection-accordion"
-                           href="#collapse{{$index}}">
-                            {{deployment.esp.name}}
-                        </a>
-                    </h4>
-                </div>
-                <div id="collapse{{$index}}" class="panel-collapse collapse selection-list">
-                    <div class="panel-body">
-                        <label class="checkbox">
-                            <input type="checkbox"
-                                   value="checkbox-{{deployment._id}}-protocolRuns"
-                                   ng-model="selectionObjects['checkbox-' + deployment._id + '-protocolRuns']"
-                                   ng-click="selectObject($event)">
-                            Protocol Runs
-                        </label>
-                        <label class="checkbox">
-                            <input type="checkbox"
-                                   value="checkbox-{{deployment._id}}-samples"
-                                   ng-model="selectionObjects['checkbox-' + deployment._id + '-samples']"
-                                   ng-click="selectObject($event)">
-                            Samples
-                        </label>
-                        <label class="checkbox">
-                            <input type="checkbox"
-                                   value="checkbox-{{deployment._id}}-images"
-                                   ng-model="selectionObjects['checkbox-' + deployment._id + '-images']"
-                                   ng-click="selectObject($event)">
-                            Images
-                        </label>
-                        <label class="checkbox">
-                            <input type="checkbox"
-                                   value="checkbox-{{deployment._id}}-errors"
-                                   ng-model="selectionObjects['checkbox-' + deployment._id + '-errors']"
-                                   ng-click="selectObject($event)">
-                            Errors
-                        </label>
-                        <label ng-show="deployment.pcrsExist" class="checkbox">
-                            <input ng-show="deployment.pcrsExist" ng-if="false" type="checkbox"
-                                   value="checkbox-{{deployment._id}}-pcrs"
-                                   ng-model="selectionObjects['checkbox-' + deployment._id + '-pcrs']"
-                                   ng-click="selectObject($event)">
-                            PCRs
-                        </label>
+<div id="container-main" class="container-fluid">
+    <div id="row-one" class="row">
+        <div id="col-nav" class="col-sm-2" ng-controller="SelectionController">
+            <div id="panel-nav" class="panel panel-default">
+                <div id="panel-body-nav" class="panel-body">
+                    <div id="deployment-dropdown-btn-group" class="btn-group">
+                        <button id="deployment-dropdown-btn" class="btn btn-default btn-sm dropdown-toggle"
+                                type="button" data-toggle="dropdown">{{ selectedDeploymentName }} <span
+                                class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu">
+                            <li ng-repeat="name in deploymentNames" ng-click="selectDeployment($index)">
+                                <a tabindex="-1" href="#">{{name}}</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div id="selection-accordion" class="panel-group">
+                        <div class="panel panel-default" ng-repeat="deployment in selectedDeployments">
+                            <div class="panel-heading">
+                                <h4 class="panel-title">
+                                    <a class="accordion-toggle" data-toggle="collapse"
+                                       data-parent="#selection-accordion"
+                                       href="#collapse{{$index}}">
+                                        {{deployment.esp.name}}
+                                    </a>
+                                </h4>
+                            </div>
+                            <div id="collapse{{$index}}" class="panel-collapse collapse selection-list">
+                                <div class="panel-body">
+                                    <label class="checkbox">
+                                        <input type="checkbox"
+                                               value="checkbox-{{deployment._id}}-protocolRuns"
+                                               ng-model="selectionObjects['checkbox-' + deployment._id + '-protocolRuns']"
+                                               ng-click="selectObject($event)">
+                                        Protocol Runs
+                                    </label>
+                                    <label class="checkbox">
+                                        <input type="checkbox"
+                                               value="checkbox-{{deployment._id}}-samples"
+                                               ng-model="selectionObjects['checkbox-' + deployment._id + '-samples']"
+                                               ng-click="selectObject($event)">
+                                        Samples
+                                    </label>
+                                    <label class="checkbox">
+                                        <input type="checkbox"
+                                               value="checkbox-{{deployment._id}}-images"
+                                               ng-model="selectionObjects['checkbox-' + deployment._id + '-images']"
+                                               ng-click="selectObject($event)">
+                                        Images
+                                    </label>
+                                    <label class="checkbox">
+                                        <input type="checkbox"
+                                               value="checkbox-{{deployment._id}}-errors"
+                                               ng-model="selectionObjects['checkbox-' + deployment._id + '-errors']"
+                                               ng-click="selectObject($event)">
+                                        Errors
+                                    </label>
+                                    <label ng-show="deployment.pcrsExist" class="checkbox">
+                                        <input ng-show="deployment.pcrsExist" ng-if="false" type="checkbox"
+                                               value="checkbox-{{deployment._id}}-pcrs"
+                                               ng-model="selectionObjects['checkbox-' + deployment._id + '-pcrs']"
+                                               ng-click="selectObject($event)">
+                                        PCRs
+                                    </label>
 
-                        <!-- Now attach sections for Ancillary Data if available -->
-                        <div ng-repeat="(key, value) in deployment.ancillaryData">
-                            <hr/>
-                            <div class="ancillary-data-key">{{key}} <a target="_blank"
-                                                                       href="/data/instances/{{deployment.esp.name}}/deployments/{{deployment.name}}/data/processed/{{key}}.csv"
-                                                                       class="btn btn-sm icon-download-alt"></a></div>
-                            <label class="checkbox" ng-repeat="(key2,value2) in deployment.ancillaryData[key]">
-                                <input type="checkbox"
-                                       value="checkbox-{{deployment._id}}-ancdata-{{value2.sourceID}}"
-                                       ng-model="selectionObjects['checkbox-' + deployment._id + '-ancdata-' + value2.sourceID]"
-                                       ng-click="selectObject($event)">
-                                {{value2.varName}}
-                            </label>
+                                    <!-- Now attach sections for Ancillary Data if available -->
+                                    <div ng-repeat="(key, value) in deployment.ancillaryData">
+                                        <hr/>
+                                        <div class="ancillary-data-key">{{key}} <a target="_blank"
+                                                                                   href="/data/instances/{{deployment.esp.name}}/deployments/{{deployment.name}}/data/processed/{{key}}.csv"
+                                                                                   class="btn btn-sm icon-download-alt"></a>
+                                        </div>
+                                        <label class="checkbox"
+                                               ng-repeat="(key2,value2) in deployment.ancillaryData[key]">
+                                            <input type="checkbox"
+                                                   value="checkbox-{{deployment._id}}-ancdata-{{value2.sourceID}}"
+                                                   ng-model="selectionObjects['checkbox-' + deployment._id + '-ancdata-' + value2.sourceID]"
+                                                   ng-click="selectObject($event)">
+                                            {{value2.varName}}
+                                        </label>
+                                    </div>
+
+                                </div>
+                            </div>
                         </div>
-
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div id="graph-column" class="col-md-10 well well-sm" ng-controller="GraphPanelController">
-        <div class="btn-toolbar">
-            <div class="btn-group">
-                <button type="button" class="btn btn-default btn-xs icon-minus"
-                        ng-click="changePlot('lines')"></button>
-                <button type="button" class="btn btn-default btn-xs icon-ellipsis-horizontal"
-                        ng-click="changePlot('points')"></button>
+        <div id="col-graph" class="col-sm-10" ng-controller="GraphPanelController">
+            <div id="panel-graph" class="panel panel-default">
+                <div id="panel-body-graph" class="panel-body">
+                    <div class="btn-toolbar">
+                        <div class="btn-group">
+                            <button type="button" class="btn btn-default btn-xs icon-minus"
+                                    ng-click="changePlot('lines')"></button>
+                            <button type="button" class="btn btn-default btn-xs icon-ellipsis-horizontal"
+                                    ng-click="changePlot('points')"></button>
+                        </div>
+                    </div>
+                    <div id="graph"></div>
+                </div>
             </div>
         </div>
-        <div id="graph-panel"></div>
     </div>
-</div>
 
-<!-- The details panel row -->
-<div class="row">
-    <div id="details-column" ng-controller="DetailPanelController" class="col-md-12 well well-sm details-row">
-        <tabset>
-            <tab ng-repeat="tab in tabs" heading="{{tab.title}}" active="tab.active" disabled="tab.disabled">
-                <div ng-include="tab.content"></div>
-            </tab>
-        </tabset>
+    <!-- The details panel row -->
+    <div id="row-two" class="row">
+        <div id="col-detail" class="col-xs-12" ng-controller="DetailPanelController">
+            <div id="panel-detail" class="panel panel-default">
+                <div id="panel-body-detail" class="panel-body">
+                    <tabset>
+                        <tab ng-repeat="tab in tabs" heading="{{tab.title}}" active="tab.active"
+                             disabled="tab.disabled">
+                            <div ng-include="tab.content"></div>
+                        </tab>
+                    </tabset>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
