Implemented the capability to download the CSV file as a summary report of the deployment

--- a/app/index.html
+++ b/app/index.html
@@ -45,6 +45,9 @@
                                        href="#collapse{{$index}}">
                                         {{deployment.esp.name}}
                                     </a>
+                                    <a target="_blank"
+                                       href="/deployments/{{deployment._id}}?returnSummary=true"
+                                       class="btn btn-sm icon-download-alt"></a>
                                 </h4>
                             </div>
                             <div id="collapse{{$index}}" class="panel-collapse collapse selection-list">
