--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <p>Welcome to the documentation pages for the ESP Applications project.</p>
-		<p>You can find detailed design documentation <a href="http://kgomes.github.io/esp-apps/generated/">here</a></p>
+		<p>You can find detailed design documentation for the ESP Applications <a href="http://kgomes.github.io/esp-apps/generated/">here</a></p>
 		<h3><a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 		<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
       </section>
