--- a/app/index.html
+++ b/app/index.html
@@ -5,15 +5,15 @@
     <title>ESP Web Application</title>
 
     <!-- Any appropriate stylesheets -->
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
-    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css"/>
-    <link rel="stylesheet" type="text/css" href="css/jquery-ui.css"/>
+    <link rel="stylesheet" type="text/css" href="lib/bootstrap/dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" type="text/css" href="lib/fontawesome/css/font-awesome.min.css"/>
+    <link rel="stylesheet" type="text/css" href="lib/jquery-ui/themes/ui-lightness/jquery-ui.min.css"/>
     <link rel="stylesheet" type="text/css" href="css/esp-responsive.css"/>
 
     <!-- HTML 5 Shim for IE backwards compatibility -->
     <!--[if lt IE 9]>
-    <script src="lib/html5shiv.js"></script>
-    <script src="lib/respond.min.js"></script>
+    <script src="lib/html5shiv/dist/html5shiv.min.js"></script>
+    <script src="lib/respond/dest/respond.min.js"></script>
     <![endif]-->
 </head>
 
@@ -47,62 +47,72 @@
                                     </a>
                                     <a target="_blank"
                                        href="/deployments/{{deployment._id}}?returnSummary=true"
-                                       class="btn btn-sm icon-download-alt"></a>
+                                       class="btn btn-sm fa fa-download"></a>
                                 </h4>
                             </div>
                             <div id="collapse{{$index}}" class="panel-collapse collapse selection-list">
                                 <div class="panel-body">
-                                    <label class="checkbox">
-                                        <input type="checkbox"
-                                               value="checkbox-{{deployment._id}}-protocolRuns"
-                                               ng-model="selectionObjects['checkbox-' + deployment._id + '-protocolRuns']"
-                                               ng-click="selectObject($event)">
-                                        Protocol Runs
-                                    </label>
-                                    <label class="checkbox">
-                                        <input type="checkbox"
-                                               value="checkbox-{{deployment._id}}-samples"
-                                               ng-model="selectionObjects['checkbox-' + deployment._id + '-samples']"
-                                               ng-click="selectObject($event)">
-                                        Samples
-                                    </label>
-                                    <label class="checkbox">
-                                        <input type="checkbox"
-                                               value="checkbox-{{deployment._id}}-images"
-                                               ng-model="selectionObjects['checkbox-' + deployment._id + '-images']"
-                                               ng-click="selectObject($event)">
-                                        Images
-                                    </label>
-                                    <label class="checkbox">
-                                        <input type="checkbox"
-                                               value="checkbox-{{deployment._id}}-errors"
-                                               ng-model="selectionObjects['checkbox-' + deployment._id + '-errors']"
-                                               ng-click="selectObject($event)">
-                                        Errors
-                                    </label>
-                                    <label ng-show="deployment.pcrsExist" class="checkbox">
-                                        <input ng-show="deployment.pcrsExist" ng-if="false" type="checkbox"
-                                               value="checkbox-{{deployment._id}}-pcrs"
-                                               ng-model="selectionObjects['checkbox-' + deployment._id + '-pcrs']"
-                                               ng-click="selectObject($event)">
-                                        PCRs
-                                    </label>
-
+                                    <div class="checkbox">
+                                        <label>
+                                            <input type="checkbox"
+                                                   value="checkbox-{{deployment._id}}-protocolRuns"
+                                                   ng-model="selectionObjects['checkbox-' + deployment._id + '-protocolRuns']"
+                                                   ng-click="selectObject($event)">
+                                            Protocol Runs
+                                        </label>
+                                    </div>
+                                    <div class="checkbox">
+                                        <label>
+                                            <input type="checkbox"
+                                                   value="checkbox-{{deployment._id}}-samples"
+                                                   ng-model="selectionObjects['checkbox-' + deployment._id + '-samples']"
+                                                   ng-click="selectObject($event)">
+                                            Samples
+                                        </label>
+                                    </div>
+                                    <div class="checkbox">
+                                        <label>
+                                            <input type="checkbox"
+                                                   value="checkbox-{{deployment._id}}-images"
+                                                   ng-model="selectionObjects['checkbox-' + deployment._id + '-images']"
+                                                   ng-click="selectObject($event)">
+                                            Images
+                                        </label>
+                                    </div>
+                                    <div class="checkbox">
+                                        <label class="checkbox">
+                                            <input type="checkbox"
+                                                   value="checkbox-{{deployment._id}}-errors"
+                                                   ng-model="selectionObjects['checkbox-' + deployment._id + '-errors']"
+                                                   ng-click="selectObject($event)">
+                                            Errors
+                                        </label>
+                                    </div>
+                                    <div ng-show="deployment.pcrsExist" class="checkbox">
+                                        <label ng-show="deployment.pcrsExist">
+                                            <input ng-show="deployment.pcrsExist" type="checkbox"
+                                                   value="checkbox-{{deployment._id}}-pcrs"
+                                                   ng-model="selectionObjects['checkbox-' + deployment._id + '-pcrs']"
+                                                   ng-click="selectObject($event)">
+                                            PCRs
+                                        </label>
+                                    </div>
                                     <!-- Now attach sections for Ancillary Data if available -->
                                     <div ng-repeat="(key, value) in deployment.ancillaryData">
                                         <hr/>
                                         <div class="ancillary-data-key">{{key}} <a target="_blank"
                                                                                    href="/data/instances/{{deployment.esp.name}}/deployments/{{deployment.name}}/data/processed/{{key}}.csv"
-                                                                                   class="btn btn-sm icon-download-alt"></a>
+                                                                                   class="btn btn-sm fa fa-download"></a>
                                         </div>
-                                        <label class="checkbox"
-                                               ng-repeat="(key2,value2) in deployment.ancillaryData[key]">
-                                            <input type="checkbox"
-                                                   value="checkbox-{{deployment._id}}-ancdata-{{value2.sourceID}}"
-                                                   ng-model="selectionObjects['checkbox-' + deployment._id + '-ancdata-' + value2.sourceID]"
-                                                   ng-click="selectObject($event)">
-                                            {{value2.varName}}
-                                        </label>
+                                        <div ng-repeat="(key2,value2) in deployment.ancillaryData[key]" class="checkbox">
+                                            <label>
+                                                <input type="checkbox"
+                                                       value="checkbox-{{deployment._id}}-ancdata-{{value2.sourceID}}"
+                                                       ng-model="selectionObjects['checkbox-' + deployment._id + '-ancdata-' + value2.sourceID]"
+                                                       ng-click="selectObject($event)">
+                                                {{value2.varName}}
+                                            </label>
+                                        </div>
                                     </div>
 
                                 </div>
@@ -117,9 +127,9 @@
                 <div id="panel-body-graph" class="panel-body">
                     <div class="btn-toolbar">
                         <div class="btn-group">
-                            <button type="button" class="btn btn-default btn-xs icon-minus"
+                            <button type="button" class="btn btn-default btn-xs fa fa-minus"
                                     ng-click="changePlot('lines')"></button>
-                            <button type="button" class="btn btn-default btn-xs icon-ellipsis-horizontal"
+                            <button type="button" class="btn btn-default btn-xs fa fa-ellipsis-h"
                                     ng-click="changePlot('points')"></button>
                         </div>
                     </div>
@@ -146,16 +156,15 @@
     </div>
 </div>
 
-<!-- Import the JavaScript -->
-<script src="lib/date.format.js"></script>
-<script src="lib/jquery-1.10.2.min.js"></script>
-<script src="lib/jquery-ui.min.js"></script>
-<script src="lib/highstock.js"></script>
-<!--<script src="lib/exporting.js"></script>-->
-<script src="lib/bootstrap.min.js"></script>
-<script src="lib/angular.min.js"></script>
-<script src="lib/ui-bootstrap-tpls-0.6.0.min.js"></script>
-<script src="lib/glfx.js"></script>
+<!-- Import the JavaScript libraries (order is important here!) -->
+<script src="lib/date.format/date.format.js"></script>
+<script src="lib/jquery/dist/jquery.min.js"></script>
+<script src="lib/jquery-ui/jquery-ui.min.js"></script>
+<script src="lib/highstock-release/highstock.js"></script>
+<script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="lib/angular/angular.min.js"></script>
+<script src="lib/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+<script src="lib/glfx-bower/glfx.js"></script>
 <script src="js/app.js"></script>
 <script src="js/services/ESPAppCoordinator.js"></script>
 <script src="js/services/DeploymentData.js"></script>
