Trying to get icons to show right on touch and web
Added a couple of links to try and force the iOS devices to use the correct icon and the favicon to pick up correctly.

--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8"/>
     <title>ESP Web Application</title>
 
+    <!-- The favicon -->
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+
+    <!-- Define the apple touch icon -->
+    <link rel="apple-touch-icon" href="apple-touch-icon.png"/>
+
     <!-- Any appropriate stylesheets -->
     <link rel="stylesheet" type="text/css" href="lib/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" type="text/css" href="lib/fontawesome/css/font-awesome.min.css"/>
