--- a/app/index.html
+++ b/app/index.html
@@ -166,6 +166,7 @@
 <script src="lib/date.format/date.format.js"></script>
 <script src="lib/jquery/dist/jquery.min.js"></script>
 <script src="lib/jquery-ui/jquery-ui.min.js"></script>
+<script src="lib/jquery-ui-touch-punch/jquery.ui.touch-punch.min.js"></script>
 <script src="lib/highstock-release/highstock.js"></script>
 <script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="lib/angular/angular.min.js"></script>
