Some mobile app changes
Got the map working to display current deployments

--- a/espmob/www/index.html
+++ b/espmob/www/index.html
@@ -6,7 +6,7 @@
     <title></title>
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
-    <link href="lib/openlayers3/build/ol.css" rel="stylesheet">
+    <link href="lib/openlayers3.5/build/ol.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
@@ -17,12 +17,13 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
     <!-- OpenLayers -->
-    <script src="lib/openlayers3/build/ol.js"></script>
+    <script src="lib/openlayers3.5/build/ol-debug.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
+    <script src="js/utils.js"></script>
     <script src="js/app.js"></script>
     <script src="views/home/home.js"></script>
 </head>
