--- a/espmob/www/index.html
+++ b/espmob/www/index.html
@@ -19,20 +19,20 @@
     <!-- OpenLayers -->
     <script src="lib/openlayers3.5/build/ol-debug.js"></script>
 
+    <!-- Highstock -->
+    <script src="lib/highstock-release/highstock-all.js"></script>
+
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
     <script src="js/utils.js"></script>
     <script src="js/app.js"></script>
-    <script src="views/home/home.js"></script>
+    <script src="views/map/map.js"></script>
+    <script src="views/select/select.js"></script>
+    <script src="views/chart/chart.js"></script>
 </head>
 <body ng-app="espmob">
-<ion-nav-bar class="bar-positive">
-    <ion-nav-back-button class="button-clear">
-              <i class="icon ion-ios-arrow-left"></i>
-    </ion-nav-back-button>
-</ion-nav-bar>
 <ion-nav-view></ion-nav-view>
 </body>
 </html>
