--- a/app/index.html
+++ b/app/index.html
@@ -174,7 +174,13 @@
 <script src="lib/jquery-ui-touch-punch/jquery.ui.touch-punch.min.js"></script>
 <script src="lib/highstock-release/highstock.js"></script>
 <script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="lib/auth0-lock/build/auth0-lock.min.js"></script>
 <script src="lib/angular/angular.min.js"></script>
+<script src="lib/angular-cookies/angular-cookies.min.js"></script>
+<script src="lib/angular-route/angular-route.min.js"></script>
+<script src="lib/auth0-angular/build/auth0-angular.min.js"></script>
+<script src="lib/a0-angular-storage/dist/angular-storage.min.js"></script>
+<script src="lib/angular-jwt/dist/angular-jwt.min.js"></script>
 <script src="lib/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 <script src="lib/glfx-bower/glfx.js"></script>
 <script src="js/app.js"></script>
