Fixed bug in env.template and update app to use npm instead of bower

--- a/app/index.html
+++ b/app/index.html
@@ -11,15 +11,15 @@
     <link rel="apple-touch-icon" href="apple-touch-icon.png"/>
 
     <!-- Any appropriate stylesheets -->
-    <link rel="stylesheet" type="text/css" href="lib/bootstrap/dist/css/bootstrap.min.css"/>
-    <link rel="stylesheet" type="text/css" href="lib/fontawesome/css/font-awesome.min.css"/>
-    <link rel="stylesheet" type="text/css" href="lib/jquery-ui/themes/ui-lightness/jquery-ui.min.css"/>
+    <link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" type="text/css" href="node_modules/font-awesome/css/font-awesome.min.css"/>
+    <link rel="stylesheet" type="text/css" href="node_modules/jquery-ui-dist/jquery-ui.min.css"/>
     <link rel="stylesheet" type="text/css" href="css/esp-responsive.css"/>
 
     <!-- HTML 5 Shim for IE backwards compatibility -->
     <!--[if lt IE 9]>
-    <script src="lib/html5shiv/dist/html5shiv.min.js"></script>
-    <script src="lib/respond/dest/respond.min.js"></script>
+    <script src="node_modules/html5shiv/dist/html5shiv.min.js"></script>
+    <script src="node_modules/respond/main.js"></script>
     <![endif]-->
 </head>
 
@@ -168,15 +168,15 @@
 </div>
 
 <!-- Import the JavaScript libraries (order is important here!) -->
-<script src="lib/date.format/date.format.js"></script>
-<script src="lib/jquery/dist/jquery.min.js"></script>
-<script src="lib/jquery-ui/jquery-ui.min.js"></script>
+<script src="node_modules/date.format/index.js"></script>
+<script src="node_modules/jquery/dist/jquery.min.js"></script>
+<script src="node_modules/jquery-ui-dist/jquery-ui.min.js"></script>
 <!-- <script src="lib/jquery-ui-touch-punch/jquery.ui.touch-punch.min.js"></script> -->
-<script src="lib/highstock-release/highstock.js"></script>
-<script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="lib/angular/angular.min.js"></script>
-<script src="lib/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
-<script src="lib/glfx-bower/glfx.js"></script>
+<script src="node_modules/highstock-release/highstock.js"></script>
+<script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="node_modules/angular/angular.min.js"></script>
+<script src="node_modules/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+<script src="node_modules/glfx/glfx.js"></script>
 <script src="js/app.js"></script>
 <script src="js/services/ESPAppCoordinator.js"></script>
 <script src="js/services/DeploymentData.js"></script>
